--- a/unit-tests/CMakeLists.txt
+++ b/unit-tests/CMakeLists.txt
@@ -94,6 +94,6 @@ add_executable(test_Document
 	"${CMAKE_SOURCE_DIR}/src/TeXHighlighter.h"
 )
 target_compile_options(test_Document PRIVATE ${WARNING_OPTIONS})
-target_link_libraries(test_Document ${QT_LIBRARIES} Hunspell::hunspell SyncTeX::synctex QtPDF::qtpdf ${ZLIB_LIBRARIES} ${TEXWORKS_ADDITIONAL_LIBS})
+target_link_libraries(test_Document QtPDF::qtpdf SyncTeX::synctex Hunspell::hunspell ${QT_LIBRARIES} ${ZLIB_LIBRARIES} ${TEXWORKS_ADDITIONAL_LIBS})
 add_test(NAME test_Document COMMAND test_Document WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/testcases")
 
