--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,10 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        # Temporary fix for https://github.com/actions/virtual-environments/issues/1811
+        brew untap local/homebrew-openssl
+        brew untap local/homebrew-python2
+        # End of fix
         brew update > brew_update.log || { print_error "Updating homebrew failed"; cat brew_update.log; exit 1; }
         brew install hunspell poppler lua qt5
 
