Add qt-declarative to fedora/opensuse docker files

--- a/.github/workflows/Dockerfile.fedora
+++ b/.github/workflows/Dockerfile.fedora
@@ -8,6 +8,7 @@ RUN yum -y install \
 	lua-devel \
 	poppler-qt5-devel \
 	qt5-qtbase-devel \
+	qt5-qtdeclarative-devel \
 	qt5-qtscript-devel \
 	qt5-qttools-static \
 	zlib-devel \
