--- a/.github/workflows/ci-bigsur.yml
+++ b/.github/workflows/ci-bigsur.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI BigSur
 on:
   - push
   - pull_request
@@ -16,7 +16,7 @@ jobs:
     - name: Install Dependencies
       run: |
         brew update > brew_update.log || { echo "Updating homebrew failed"; cat brew_update.log; exit 1; }
-        brew install hunspell poppler lua qt5
+        brew install coreutils hunspell poppler lua qt5
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
@@ -27,4 +27,11 @@ jobs:
 
     - name: Test
       run: QT_QPA_PLATFORM_PLUGIN_PATH="${Qt5_DIR}/plugins/platforms" ctest -V
+      working-directory: build
+
+    - name: Try run
+      run: |
+        ls -lisa
+        find .
+        gtimeout 5 TeXworks.app/Contents/TeXworks
       working-directory: build
