Try run ./TeXworks.app

--- a/.github/workflows/ci-bigsur.yml
+++ b/.github/workflows/ci-bigsur.yml
@@ -33,5 +33,5 @@ jobs:
       run: |
         ls -lisa
         find .
-        gtimeout 5 TeXworks.app/Contents/TeXworks
+        gtimeout 5 ./TeXworks.app
       working-directory: build
