--- a/.github/workflows/ci-bigsur.yml
+++ b/.github/workflows/ci-bigsur.yml
@@ -31,7 +31,5 @@ jobs:
 
     - name: Try run
       run: |
-        ls -lisa
-        find .
-        gtimeout 5 ./TeXworks.app/Contents/MacOS/TeXworks
+        gtimeout 5 open ./TeXworks.app
       working-directory: build
