--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,7 @@ jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
+    if: false
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -47,6 +48,7 @@ jobs:
   macos:
     name: Mac OS X (Homebrew)
     runs-on: macos-latest
+    if: false
 
     steps:
     - name: Checkout
