--- a/.github/actions/package-macos/action.yml
+++ b/.github/actions/package-macos/action.yml
@@ -20,7 +20,7 @@ runs:
       id: version-info
       shell: bash
       run: |
-        echo "set-output name=TW_VERSION::$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)""
+        echo "set-output name=TW_VERSION::$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)"
         echo "set-output name=GIT_HASH::$(git --git-dir=".git" show --no-patch --pretty="%h")"
         echo "set-output name=DATE_HASH::$(date -u +"%Y%m%d%H%M")"
     - name: 'Running CPack'
