--- a/.github/actions/package-macos/action.yml
+++ b/.github/actions/package-macos/action.yml
@@ -20,9 +20,9 @@ runs:
       id: version-info
       shell: bash
       run: |
-        echo "set-output name=TW_VERSION::$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)"
-        echo "set-output name=GIT_HASH::$(git --git-dir=".git" show --no-patch --pretty="%h")"
-        echo "set-output name=DATE_HASH::$(date -u +"%Y%m%d%H%M")"
+        echo "::set-output name=TW_VERSION::$(sed -ne 's,^#define TEXWORKS_VERSION[[:space:]]"\([0-9.]\{3\,\}\)"$,\1,p' src/TWVersion.h)"
+        echo "::set-output name=GIT_HASH::$(git --git-dir=".git" show --no-patch --pretty="%h")"
+        echo "::set-output name=DATE_HASH::$(date -u +"%Y%m%d%H%M")"
     - name: 'Running CPack'
       shell: bash
 #      run: cpack --verbose
@@ -33,5 +33,5 @@ runs:
       run: |
         FILENAME="TeXworks-osx-${{ steps.version-info.outputs.TW_VERSION }}-${{ steps.version-info.outputs.DATE_HASH }}-git_${{ steps.version-info.outputs.GIT_HASH }}.dmg"
         # mv "TeXworks.*.dmg" "${FILENAME}"
-        echo "set-output name=file::${FILENAME}"
+        echo "::set-output name=file::${FILENAME}"
       working-directory: ${{ inputs.builddir }}
