verify output of package action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,5 +57,7 @@ jobs:
     - run: mkdir build
 
     - name: Package
+      id: package
       uses: ./.github/actions/package-macos
 
+    - run: echo "${{ steps.package.outputs.file }}"
