--- a/.github/actions/package-macos/action.yml
+++ b/.github/actions/package-macos/action.yml
@@ -12,6 +12,9 @@ outputs:
   file:
     description: 'The filename of the packaged artifact (relative to builddir)'
     value: ${{ steps.rename-dmg.outputs.file }}
+  version:
+    description: 'The version of the packaged artifact (e.g., 0.7-202011160643-git_14dcc2c)'
+    value: ${{ steps.rename-dmg.outputs.version }}
 
 runs:
   using: composite
@@ -31,7 +34,9 @@ runs:
       id: rename-dmg
       shell: bash
       run: |
-        FILENAME="TeXworks-osx-${{ steps.version-info.outputs.TW_VERSION }}-${{ steps.version-info.outputs.DATE_HASH }}-git_${{ steps.version-info.outputs.GIT_HASH }}.dmg"
+        VERSION="${{ steps.version-info.outputs.TW_VERSION }}-${{ steps.version-info.outputs.DATE_HASH }}-git_${{ steps.version-info.outputs.GIT_HASH }}"
+        FILENAME="TeXworks-osx-${VERSION}.dmg"
         mv "TeXworks.*.dmg" "${FILENAME}"
+        echo "::set-output name=version::${VERSION}"
         echo "::set-output name=file::${FILENAME}"
       working-directory: ${{ inputs.builddir }}
