--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,21 @@ jobs:
       run: QT_QPA_PLATFORM_PLUGIN_PATH="${Qt5_DIR}/plugins/platforms" ctest -V
       working-directory: build
 
+    - name: Package
+      id: package
+      uses: ./.github/actions/package-macos
+
+    - name: Deploy to Bintray
+      uses: ./.github/actions/deploy-bintray
+      with:
+          file: build/${{ steps.package.outputs.file }}
+          subject: stloeffler
+          repo: generic
+          pkg: Latest-TeXworks-Mac
+          version: ${{ steps.package.outputs.version }}
+          username: stloeffler
+          key: ${{ secrets.bintray_key }}
+
 
 ################################################################################
 
