--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,21 +6,12 @@ jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
-    if: false
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Bintray deploy
-      uses: ./.github/actions/deploy-bintray
-      with:
-          file: NEWS
-          subject: stloeffler
-          repo: generic
-          pkg: test
-          version: 4
-          username: stloeffler
-          key: ${{ secrets.bintray_key }}
+    - name: Package for Launchpad
+      uses: ./.github/actions/package-launchpad
 
 ################################################################################
 
