--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # fetch the entire history so we can create the changelog
 
     - name: Package for Launchpad
       uses: ./.github/actions/package-launchpad
