apt install ubuntu-dev-tools

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         fetch-depth: 0 # fetch the entire history so we can create the changelog
 
     - name: Install packaging dependencies
-      run: sudo apt install debhelper dput
+      run: sudo apt install ubuntu-dev-tools debhelper dput
 
     - name: Package for Launchpad
       uses: ./.github/actions/package-launchpad
