--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
     - name: Prepare for packaging
       run: |
         sudo apt install ubuntu-dev-tools debhelper dput
+        mkdir -p "${HOME}/.gnupg"
         echo '${{ secrets.DECRYPTION_KEY }}' | gpg --quiet --batch --yes --decrypt --passphrase-fd=0 ./.github/actions/package-launchpad/launchpad/key.asc.gpg | gpg --batch --import
 
     - name: Package for Launchpad
