--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
       run: |
         sudo apt install ubuntu-dev-tools debhelper dput
         mkdir -p "${HOME}/.gnupg"
+        chmod 700 "${HOME}/.gnupg"
         # DEBUG
         gpg --list-keys
         echo '${{ secrets.DECRYPTION_KEY }}' | gpg --quiet --batch --yes --decrypt --passphrase-fd=0 ./.github/actions/package-launchpad/launchpad/key.asc.gpg | gpg --batch --import
