--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,18 @@ jobs:
         fetch-depth: 0 # fetch the entire history so we can create the changelog
 
     - name: Package for Launchpad
+      id: package
       uses: ./.github/actions/package-launchpad
       with:
         DEB_PASSPHRASE: ${{ secrets.DEB_PASSPHRASE }}
         DECRYPTION_KEY: ${{ secrets.DECRYPTION_KEY }}
+
+    - name: Deploy to Launchpad
+      uses: ./.github/actions/deploy-launchpad
+      with:
+        changes_files: ${{ steps.package.outputs.changes_files }}
+        devel-repo: "ppa:st.loeffler/test"
+        stable-repo: "ppa:st.loeffler/test"
 
 ################################################################################
 
