Group dput log messages

--- a/.github/actions/deploy-launchpad/action.yml
+++ b/.github/actions/deploy-launchpad/action.yml
@@ -26,6 +26,8 @@ runs:
             ;;
         esac
         for FILE in ${{ inputs.changes_files }}; do
+          echo "::group::Uploading ${FILE}"
           dput ${REPO} "$FILE"
+          echo "::endgroup::"
         done
       shell: bash
