--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ jobs:
   linux:
     name: Linux
     runs-on: ubuntu-latest
+    if: false
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
