--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,22 +33,38 @@ jobs:
   win:
     name: Windows
     runs-on: windows-latest
-    if: false
+    defaults:
+      run:
+        shell: msys2 {0}
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Bintray deploy
-      uses: ./.github/actions/deploy-bintray
+    - name: Setup MSYS
+      uses: msys2/setup-msys2@v2
       with:
-          file: COPYING
-          subject: stloeffler
-          repo: generic
-          pkg: test
-          version: 4
-          username: stloeffler
-          key: ${{ secrets.bintray_key }}
+        update: true
+        install: mingw-w64-x86_64-cmake make mingw-w64-x86_64-gcc mingw-w64-x86_64-qt5
+#        install: mingw-w64-x86_64-cmake git make mingw-w64-x86_64-gcc mingw-w64-x86_64-hunspell mingw-w64-x86_64-lua mingw-w64-x86_64-poppler mingw-w64-x86_64-qt5
+
+    - name: Configure
+      run: cmake -G 'MSYS Makefiles' -B build
+      working-directory: test
+
+    - name: Build
+      run: make -j
+      working-directory: test/build
+
+    - name: Strip
+      run: strip test.exe
+      working-directory: test/build
+
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: test/build/test.exe
 
 ################################################################################
 
