--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ project(test)
 
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets)
 
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static"
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
 
 add_executable(test test.cpp)
 target_link_libraries(test Qt5::Core Qt5::Widgets)
