--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - run: wsl -e lsb_release -a
+      - run: wsl -e sudo apt update
       - run: wsl -l
       - run: wsl -l --all
       - run: wsl -l -v
