--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: Vampire/setup-wsl@v1
 
-      - shell: wsl_bash {0}
+      - shell: wsl-bash {0}
         run: |
           sudo apt update
           lsb_release -a
