--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,11 +36,24 @@ jobs:
 
     steps:
       - uses: Vampire/setup-wsl@v1
+        with:
+          update: true
 
       - shell: wsl-bash {0}
         run: |
-          sudo apt update
-          lsb_release -a
+          sudo add-apt-repository https://pkg.mxe.cc/repos/apt
+          sudo apt install mxe-i686-w64-mingw32.static-qtbase
+          MXEDIR="/usr/lib/mxe"
+          MXETARGET=i686-w64-mingw32.static
+          pwd
+          ls /mnt
+          echo "${{ github.workspace }}"
+          cd "/mnt/${{ github.workspace }}/test"
+          ${MXEDIR}/usr/bin/${MXETARGET}-cmake -B build
+          cd build
+          make
+          ls
+
 
 ################################################################################
 
