--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,7 @@ jobs:
 
       - shell: wsl-bash {0}
         run: |
+          uname -a
           echo "add-apt-repository"
           echo 'deb https://pkg.mxe.cc/repos/apt stretch main' | sudo tee -a /etc/apt/sources.list
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C6BF758A33A3A276
