cat /etc/apt/sources.list

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,7 @@ jobs:
           uname -a
           echo "add-apt-repository"
           echo 'deb https://pkg.mxe.cc/repos/apt stretch main/binary-amd64' | sudo tee -a /etc/apt/sources.list
+          cat /etc/apt/sources.list
           sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C6BF758A33A3A276
           echo "apt search"
           apt search qtbase
