apt --assume-yes

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
           sudo apt update
           echo "apt search"
           apt search qtbase
-          sudo apt install mxe-i686-w64-mingw32.static-qtbase
+          sudo apt install --assume-yes mxe-i686-w64-mingw32.static-qtbase
           MXEDIR="/usr/lib/mxe"
           MXETARGET=i686-w64-mingw32.static
           pwd
