--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,10 +56,7 @@ jobs:
           sudo apt install --assume-yes mxe-i686-w64-mingw32.static-qtbase
           MXEDIR="/usr/lib/mxe"
           MXETARGET=i686-w64-mingw32.static
-          pwd
-          ls /mnt
-          echo "${{ github.workspace }}"
-          cd "/mnt/${{ github.workspace }}/test"
+          cd test
           ${MXEDIR}/usr/bin/${MXETARGET}-cmake -B build
           cd build
           make
