--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,6 +62,12 @@ jobs:
           make
           ls
 
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: test/build/test.exe
+
 
 ################################################################################
 
