--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,9 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - uses: Vampire/setup-wsl@v1
       with:
 #        update: true
@@ -43,6 +46,8 @@ jobs:
 
     - shell: wsl-bash {0}
       run: |
+        pwd
+        ls
         uname -a
         echo "add-apt-repository"
         echo "deb https://pkg.mxe.cc/repos/apt stretch main" | sudo tee -a /etc/apt/sources.list
