Switch back to non-Qt test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,7 +58,8 @@ jobs:
         sudo apt update
         echo "apt search"
         apt search qtbase
-        sudo apt install --assume-yes mxe-i686-w64-mingw32.static-qtbase
+        #sudo apt install --assume-yes mxe-i686-w64-mingw32.static-qtbase
+        sudo apt install --assume-yes mxe-i686-w64-mingw32.static-cc
         MXEDIR="/usr/lib/mxe"
         MXETARGET=i686-w64-mingw32.static
         mkdir test/build
