--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,6 +49,7 @@ jobs:
         pwd
         ls
         uname -a
+        echo "::group::Install MXE"
         echo "add-apt-repository"
         echo "deb https://pkg.mxe.cc/repos/apt stretch main" | sudo tee -a /etc/apt/sources.list
         cat /etc/apt/sources.list
@@ -62,6 +63,7 @@ jobs:
         sudo apt install --assume-yes mxe-i686-w64-mingw32.static-cc
         MXEDIR="/usr/lib/mxe"
         MXETARGET=i686-w64-mingw32.static
+        echo "::endgroup::"
         ls -lisa ${MXEDIR}/usr/bin/
         ls -lisa ${MXEDIR}/usr/x86_64-pc-linux-gnu/bin/
         mkdir test/build
